Fix Linkedin link

--- a/resume.html
+++ b/resume.html
@@ -416,7 +416,7 @@ class="uri">https://github.com/clementiaboo/bios-611-project</a></li>
 <ul>
 <li><a href="Resume_Clement_Li_2025.pdf">Download PDF resume</a></li>
 <li><a href="https://github.com/clementiaboo">GitHub</a> · <a
-href="https://www.linkedin.com/in/https://www.linkedin.com/in/clement-li-881696a4/">LinkedIn</a></li>
+href="https://www.linkedin.com/in/clement-li-881696a4/">LinkedIn</a></li>
 </ul>
 </div>
 
