Final Index Linkedin Fix

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ href="mailto:maximumride112@gmail.com">maximumride112@gmail.com</a></li>
 <li>🐙 Visit my <a
 href="https://github.com/clementiaboo">GitHub</a></li>
 <li>View my <a
-href="https:/www.linkedin.com/in/clement-li-881696a4/">Linkedin</a>
+href="https://www.linkedin.com/in/clement-li-881696a4/">Linkedin</a>
 page</li>
 </ul>
 <p><img
