Final Commit with Dashboard

--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@ $(document).ready(function () {
 <p>I’m a Biostatistics MS student at Columbia. This site hosts my
 projects, resume, and contact info.</p>
 <ul>
+<li>🍽️ See my <a href="rest_inspec_dashboard.html">NYC Restaurant
+Plots</a></li>
 <li>👉 See my <a href="resume.html">resume</a></li>
 <li>📬 Email me at <a
 href="mailto:maximumride112@gmail.com">maximumride112@gmail.com</a></li>
